# telegramsellbot

./: .env.example  .gitignore  Dockerfile  LICENSE  README-FA.md  README.md  SECURITY.md  backup.sh  deploy.sh  docker-compose.prod.yml  doctor.sh  fix.py  install.sh  main.py  migrate_bundle.sh  pyproject.toml  recover_sales_report.py  restore.sh  setup.sh
core/: cache_sync.py  config.py  dashboard_auth.py  database.py  formatting.py  jalali.py  miniapp_auth.py  observability.py  rate_limit.py  redis.py  security.py  texts.py
dashboard/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: DATABASE.md
migrations/: 003_add_server_domains_and_ticket_photo.sql  005_drop_provider_payment_id_unique.sql  006_create_audit_logs.sql  007_ready_config_sales.sql  008_plan_inventory.sql  009_user_personal_discount.sql  010_performance_indexes.sql  011_restore_provider_payment_unique.sql  012_money_and_inventory_constraints.sql  013_audit_logs_context.sql
miniapp/: index.html
models/: __init__.py  audit.py  broadcast.py  dashboard_admin.py  discount.py  order.py  payment.py  plan.py  plan_inventory.py  ready_config.py  subscription.py  ticket.py  user.py  wallet.py  xui.py
repositories/: admin.py  audit.py  base.py  discount.py  settings.py  ticket.py  user.py  wallet.py
scripts/: add_lifetime_used_bytes.py  backfill_ton_pay_amount.py  dashboard_admin.py  import_legacy.py  recover_sales.py
services/: admin_gifts.py  admin_transfer.py  banner.py  card_payments.py  crypto_autoconfirm.py  crypto_price.py  custom_purchase.py  dr_check.py  notifications.py  payment.py  phone_verification.py  plan_inventory.py  receipt_ocr.py  renewal.py  sales_notifications.py  text_templates.py
tests/: conftest.py  test_admin_config_search.py  test_backup_env.py  test_button_style.py  test_critical_fixes.py  test_discount.py  test_error_handler_rollback.py  test_force_join.py  test_highfix_backup.py  test_highfix_inline.py  test_highfix_miniapp.py  test_highfix_money.py  test_highfix_provisioning.py  test_medfix_qr.py  (+50 more)
(+184 files in other folders)
